--- a/src/style/button.css
+++ b/src/style/button.css
@@ -1,7 +1,7 @@
 .button {
     cursor: pointer;
     color: #7926a8;
-    font-size: 200%;
+    font-size: 30px;
     margin-top: 40%;
     padding: 10px;
     border-radius: 10px;
