--- a/src/style/dice.css
+++ b/src/style/dice.css
@@ -103,3 +103,29 @@
     box-shadow: 25px 25px,
         50px 50px;
 }
+
+
+
+.all_board {
+  display: block;
+  justify-content: center;
+
+}
+
+
+.button {
+  cursor: pointer;
+  color: #7926a8;
+  font-size: 30px;
+  margin-top: 40%;
+  padding: 10px;
+  border-radius: 10px;
+  transition: .4s;
+  background-color: #ffffffc0;
+
+}
+
+.button:hover {
+  color: #fff;
+  background: #7826a883;
+}
