--- a/src/style/dice.css
+++ b/src/style/dice.css
@@ -16,12 +16,9 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  border-radius: 20px;
-  border: 5px solid #f6f3f0;
+  border: 5px solid #7c4a88;
   transform-style: preserve-3d;
-  background: linear-gradient(
-      145deg, #dddbd8, #fff
-  );
+  background:  #ffffff;
 }
 
 .face::before {
@@ -72,7 +69,7 @@
 .front::after {
   width: 30px;
   height: 30px;
-  background:  #843aaf;
+  background:  #000000;
   margin: -15px 0 0 -15px;
 }
 
@@ -120,6 +117,7 @@
     border-radius: 3px;
     border: 2px solid #ffffffc0;
     transition: .4s;
+    font-size: 20px;
 }
 
 .button:hover {
